it startinggit add .git add .!

--- a/deployment/db/Dockerfile
+++ b/deployment/db/Dockerfile
@@ -2,7 +2,7 @@ FROM postgres:14.1
 
 ARG DB_NAME
 ARG DB_USERNAME
-ARG DB_PASSWORD
+ARG DB_PWD
 
 ENV POSTGRES_DB=DB_NAME
 ENV POSTGRES_USER=DB_USERNAME
